Changes by Jacob Barkdull 2015-06-20
--------------------------------------------------------------------------------
* hashover/scripts/javascript-output.php

	- Minor performance and memory optimizations.


* hashover/scripts/jsminifier.php

	- Smarter newline removal.


Changes by Jacob Barkdull 2015-06-19
--------------------------------------------------------------------------------
* Most code has moved to the TildeHash Coding Standard

	- Indention is done with tabs, only one per code block.
	- Curly braces are to be used wherever possible, including switches.
	- Class property and method names use camelCase.
	- Function definition names in the global namespace use snake_case.
	- All variable names, in any scope or namespace, use snake_case.
	- Variable and function naming convention demands only real words.
	- Strict comparisons are to be used wherever possible.
	- Class and function curly braces go on their own line.
	- There should be a space before any function parentheses.
	- There should be a space before and after any equals.
	- There should be a space after function parameters and array items.
	- There should be a newline after class method keywords.
	- There should be a blank line before a return following multiple lines.
	- There should be a blank line before a break following multiple lines.

	- This coding standard is not final. Complete and detailed 
	  documentation and rationale is forthcoming.

	  Discussion and suggestions are welcomed.


* Major rewrite of JavaScript mode

	- HashOver no longer adds any variables or functions to the global 
	  namespace, this means HashOver is now isolated. HashOver won't 
	  interfere with other JavaScript on the same page, and users and 
	  malicious JavaScript won't be able to write to HashOver's variables 
	  or execute its functions that aren't meant to be remotely executed.

	- Image tags are no longer used, instead the "background-image" CSS 